# -

./: CMakeLists.txt  is_palindrom.cpp  is_palindrom.h  laba1.cpp  main.cpp  test_palindrom.cpp
OOP/laba1/: CMakeLists.txt  README.md  is_palindrom.cpp  is_palindrom.h  main.cpp
OOP/laba1/tests/: test_palindrom.cpp
fund_alg/laba1/: number1.c  number2.c  number3.c  number4.c  number5.c  number6.c  number7.c  number8.c
tests/: test_palindrom.cpp
